# jobflow-gnn

./: .gitignore  README.md  de-cuong-chi-tiet.md  roadmap.md
backend/: .env.example  .gitignore  docker-compose.yml  export_dataset.py  extract_linkedin_cvs.py  pyproject.toml  requirements.txt  run_crawl.py  run_experiment_linkedin_cv.py  run_experiment_real_cv.py  run_grid_search.py  run_train_reranker.py  run_train_save.py
backend/apps/cvs/: admin.py  admin_urls.py  admin_views.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/jobs/: admin.py  admin_urls.py  admin_views.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/labeling/: admin.py  admin_urls.py  admin_views.py  (+5 more)
backend/config/: exceptions.py  settings.py  urls.py
backend/data/: linkedin_cvs.json
backend/ml_service/: __init__.py
backend/tests_ml/: conftest.py  test_baselines.py  test_crawler.py  test_embedding.py  test_generator.py  test_inference.py  test_labeler.py  test_losses.py  test_metrics.py  test_noisy_data.py  test_per_cv_evaluator.py  test_skill_normalization.py  test_skill_taxonomy.py  test_trainer.py
ml-service/: .env.example  README.md  pyproject.toml  run_crawl.py  run_experiment.py  run_experiment_real.py  run_experiment_real_cv.py  run_inference_demo.py  run_train_reranker.py  run_train_save.py
ml-service/data/: raw_jobs.jsonl
ml-service/docs/: experiment.md
ml-service/tests/: conftest.py  test_gnn_model.py  test_graph_builder.py  test_graph_schema.py  test_inference.py  test_metrics.py  test_skill_normalization.py  test_trainer.py
(+240 files in other folders)
