[project]
name = "jobflow-gnn-backend"
version = "0.1.0"
description = "JobFlow-GNN — Django backend with integrated ML service"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests_ml"]
