[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-service"
version = "0.1.0"
description = "JobFlow GNN — Python ML Backend"
requires-python = ">=3.11"
dependencies = [
    "pydantic-settings>=2.0",
    "numpy>=1.24",
    "torch>=2.0",
    "torch-geometric>=2.4",
    "sentence-transformers>=2.2",
    "python-dotenv>=1.0",
    "python-jobspy>=1.1",
    "pdfplumber>=0.10",
    "python-docx>=1.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
include = ["ml_service*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
